--- a/app/src/main/res/raw/html_terms.html
+++ b/app/src/main/res/raw/html_terms.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <p>
-            <strong>Terms of Use</strong>
+            <h2>Terms of Use</h2>
         </p>
         <p>
             .... ............ .. .... ...... ..... ... ........ .......... ........ ...... .... ... .... .... .... ... ....... ..... ......
